[package]
name = "i3lock-slick"
version = "0.0.1"
authors = ["timvisee <timvisee@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timvisee/i3lock-slick"
repository = "https://github.com/timvisee/i3lock-slick.git"
description = "A CLI tool to easily make i3lock look slick."

[dependencies]
clap = "2.26"
config = "0.7"
image = "0.17"
lazy_static = "0.2"
regex = "0.2"
serde = "1.0.15"
shellexpand = "1.0"
tempdir = "0.3"
version-compare = "0.0"
yaml-rust = "0.3"
